--- a/parte1.ipynb
+++ b/parte1.ipynb
@@ -201,7 +201,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ln_ejemplo = nn.LayerNorm(n_embd)\n",
+    "\n",
+    "x_normalizado = ln_ejemplo(x)"
+   ]
   },
   {
    "cell_type": "code",
@@ -209,7 +213,45 @@
    "id": "1c1d3c30",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_head = 4 \n",
+    "dropout = 0.2\n",
+    "\n",
+    "class Head(nn.module):\n",
+    "    \"\"\" Una cabeza de self-attention\"\"\"\n",
+    "    def __init__(self, head_size):\n",
+    "        super().__init__()\n",
+    "        self.key = nn.Linear(n_embd, head_size, bias = False)\n",
+    "        self.query = nn.Linear(n_embd, head_size, bias = False)\n",
+    "        self.value = nn.Linear(n_embd, head_size, bias = False)\n",
+    "        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+    "        f.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.shape\n",
+    "        k = self.key(x)\n",
+    "        q = self.query(x)\n",
+    "        wei = q @ k.transpose(-2,-1) * (C/4)**-0.5\n",
+    "        wei = wei.masked_fill(self.tril[:T,:T] == 0, float('-inf'))\n",
+    "        wei = F.softmax(wei, dim=-1)\n",
+    "        wei = self.dropout(wei)\n",
+    "        v = self.value(x)\n",
+    "        out = wei @ v\n",
+    "        return out\n",
+    "\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    \"\"\" Multiples cabezas de self attention en paralelo\"\"\"\n",
+    "    def __init_(self, num_heads, head_size):\n",
+    "        super().__init__()\n",
+    "        self.heads() = nn.ModuleList([Head(head_size=head_size) for _ in range(num_heads)])\n",
+    "        self.proj = nn.Linear(n_embd, n_embd)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = torch.cat([h(x) for h in self.heads], dim = -1)\n",
+    "        out = self.dropout(self.proj(out))\n",
+    "        return out"
+   ]
   }
  ],
  "metadata": {
