--- a/layernorm.ipynb
+++ b/layernorm.ipynb
@@ -2,7 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "b5fe5388",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.2.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+      "Downloading numpy-2.2.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.8 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.8/16.8 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m  \u001b[33m0:00:03\u001b[0ma \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: numpy\n",
+      "Successfully installed numpy-2.2.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f060b981",
    "metadata": {},
    "outputs": [],
@@ -17,10 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5555000d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "media = np.mean(x)\n",
     "print(media)"
@@ -28,10 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2bb37329",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.25\n"
+     ]
+    }
+   ],
    "source": [
     "epsilon = 1e-5\n",
     "\n",
@@ -41,32 +80,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "94d0c694",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.19999984, -0.19999984, -1.39999888,  1.39999888])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numerador = x-media\n",
     "\n",
     "denominador = np.sqrt(var + epsilon)\n",
     "\n",
-    "vector_norm = numerador / denominador\n"
+    "vector_norm = numerador / denominador\n",
+    "\n",
+    "vector_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "779691a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.99999680e-01,  1.59999808e-07, -3.99999440e-01,  4.59999664e+00])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_final = vector_norm * gamma + beta\n",
+    "\n",
+    "vector_final"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779691a8",
+   "id": "30c4b3ea",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vector_final = vector_norm * gamma + beta"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpt",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
