--- a/parte1.ipynb
+++ b/parte1.ipynb
@@ -252,6 +252,69 @@
     "        out = self.dropout(self.proj(out))\n",
     "        return out"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "102b2ad9",
+   "metadata": {},
+   "source": [
+    "MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b0ca535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    \"\"\"Una red feed forward simple\"\"\"\n",
+    "\n",
+    "    def __init__(self, n_embed):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(n_embd, 4*n_embd)\n",
+    "            nn.GELU(),\n",
+    "            nn.linear(4*n_embd, n_embd)\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc3c4ab0",
+   "metadata": {},
+   "source": [
+    "Bloque transformer unido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84eff479",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Block(nn.Module):\n",
+    "    \"\"\"Un bloque de Transoformer: Comunicación seguida de computación\"\"\"\n",
+    "    def __init__(self, n_embd, n_head):\n",
+    "        super().__init__()\n",
+    "        head_size = n_embd // n_head\n",
+    "        self.sa = MultiHeadAttention(n_head, head_size)\n",
+    "        self.ffwd = FeedForward(n_embd)\n",
+    "        self.ln1 = nn.LayerNorm(n_embd)\n",
+    "        self.ln2 = nn.LayerNorm(n_embd)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # Primera parte: Self-Attention\n",
+    "        x = x + self.sa(self.ln1(x))\n",
+    "        # Segunda parte: Feed-Forward\n",
+    "        x = x + self.ffwd(self.ln2(x))\n",
+    "        return x\n"
+   ]
   }
  ],
  "metadata": {
@@ -270,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
